<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@drawable/view_style"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_fit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/georgia_regular_font"
                    android:letterSpacing=".1"
                    android:text="@string/fitness"
                    android:textColor="@color/white"
                    android:textSize="50sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"


                    />

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/app_icon_03"
                    app:layout_constraintBottom_toBottomOf="@+id/view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_fit"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/create_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/tahoma_regular"
                    android:text="@string/Create_account"
                    android:textColor="@color/intro_color"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view" />



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_container_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/intro_color"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/intro_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/create_account"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/tahoma_regular"
                        android:hint="@string/name_hint" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tct_container_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/intro_color"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/intro_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_container_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/tahoma_regular"
                        android:hint="@string/e_mail_hint"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_container_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/intro_color"
                    app:endIconMode="password_toggle"
                    app:hintTextColor="@color/intro_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tct_container_email"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/tahoma_regular"
                        android:hint="@string/password_hint"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/txt_skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/tahoma_bold"
                    android:text="@string/skip"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/txt_container_password"
                    app:layout_constraintTop_toBottomOf="@id/txt_container_password" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_createAccount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#fe8312"
                    android:fontFamily="@font/georgia_regular_font"
                    android:padding="12dp"
                    android:text="@string/create_account"
                    android:textAllCaps="false"
                    app:cornerRadius="10dp"
                    app:layout_constraintEnd_toStartOf="@id/txt_skip"
                    app:layout_constraintStart_toStartOf="@id/txt_container_password"
                    app:layout_constraintTop_toBottomOf="@id/txt_skip" />

                <TextView
                    android:id="@+id/text12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/tahoma_regular"
                    android:text="@string/aleardy_have_an_account"

                    app:layout_constraintEnd_toEndOf="@id/btn_createAccount"
                    app:layout_constraintStart_toStartOf="@id/btn_createAccount"
                    app:layout_constraintTop_toBottomOf="@id/btn_createAccount" />

                <TextView
                    android:id="@+id/txt_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/login"
                    android:textColor="@color/intro_color"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/text12"

                    app:layout_constraintStart_toEndOf="@id/text12"

                    app:layout_constraintTop_toTopOf="@id/text12" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>